# e2a-1

./: CMakeLists.txt  README.md  scale_weight.cpp  simulator.cpp  skim_tree.cpp
Adin_analysis/: CMakeLists.txt  count.cpp  fiducial.cpp
Axel_analysis/: CMakeLists.txt  example_analysis.cpp  study_empty.cpp
Holly_analysis/: CMakeLists.txt  calcMomRes.cpp  calcMomRes2.cpp  calcNP_SRC.cpp  compareMF.cpp  compareSRC.cpp  plotMF.cpp  plotSRC.cpp  plot_n.cpp  plot_neff.cpp  plot_neff_2261.cpp  plotter.cpp
Holly_analysis2/: CMakeLists.txt  calcNCorr.cpp  findMFcuts.cpp  findSRCcuts.cpp  plotNeff.cpp  ratioNP_MF.cpp  ratioNP_SRC.cpp
Holly_analysis2/include/: Hconstants.h  Hfunctions.h
Rey_neutrons/: CMakeLists.txt  HighMomentum.cxx  MeanField.cxx  n_det_eff.cxx
Sam_analysis/: CMakeLists.txt  find_mass_combined.cpp  find_mass_combined.cpp~  find_missing_mass.cpp  scale_weight.cpp  simulator.cpp
andrew_analysis/: CMakeLists.txt
andrew_analysis/acc_Check/: CMakeLists.txt  CMakeLists.txt~  dead_check.cpp
andrew_analysis/delta_analysis/: CMakeLists.txt  event_Info.cpp  findDeltas.cpp  onlyDelta.cpp
andrew_analysis/include/: event_Info.h  part_Info.cpp  part_Info.h  srcCut_Info.h  target_Info.h
andrew_analysis/libs/: CMakeLists.txt  event_Info.cpp  srcCut_Info.cpp  target_Info.cpp
andrew_analysis/lumCheck/: 12C_data_charge_by_run.txt  12C_et_VTX_cut.txt  12C_pt_VTX_cut.txt  3He_data_charge_by_run.txt  3He_et_VTX_cut.txt  3He_pt_VTX_cut.txt  4He_data_charge_by_run.txt  4He_et_VTX_cut.txt  4He_pt_VTX_cut.txt  CMakeLists.txt  get_Theta.cpp  lumCheck.cpp  vtxCheck.cpp
andrew_analysis/mMiss/: mMiss.cpp
andrew_analysis/momCorr_analysis/: CMakeLists.txt  nMass.cpp
andrew_analysis/oldCode/: oldEvent_Info.h
andrew_analysis/ratio_analysis/: CMakeLists.txt  checkAcc.cpp  event_Info.cpp  get_Simple.cpp  get_Simple.cpp~  get_hist.cpp  incl_hist.cpp  leadCut.cpp  make_ratio.cpp  oldEvent_Info.cpp  part_Info.cpp  queryLowAcc.cpp  srcCut_Info.cpp  target_Info.cpp
andrew_analysis/sys_Error/: CMakeLists.txt  combine.cpp  get_xB_Dis.cpp  leadCutErr.cpp  param.cpp
calibration_data/: 12C_VTX_cut.txt  12C_et_VTX_cut.txt  12C_pt_VTX_cut.txt  3He_VTX_cut.txt  3He_et_VTX_cut.txt  3He_pt_VTX_cut.txt  4He_VTX_cut.txt  4He_et_VTX_cut.txt  4He_pt_VTX_cut.txt  CMakeLists.txt  PFCP_4461_2250_template.txt  el_Epratio_mom_4461_sim.root  pimdeltat_mom_2261_2250.root  pimdeltat_mom_4461_2250.root  pipdeltat_mom_2261_2250.root  pipdeltat_mom_4461_2250.root  vz_4461_12C.root
cut_library/: CMakeLists.txt  Fiducial.cpp  Run_dependent.cpp  fiducial_print.cpp  fiducial_test.cpp
cut_production/: CMakeLists.txt
cut_production/pid_sim_electron/: CMakeLists.txt  sim_pid_electron.cpp
cut_production/pid_sim_proton/: CMakeLists.txt  sim_pid_proton.cpp
erin_analysis/: CMakeLists.txt
include/: Acceptance.h  Fiducial.h  Run_dependent.h  constants.h  e2a_constants.h  global_variables.h
include/ClasTool/CVS/: Entries
include/ClasTool/ClasBanks/: Makefile_depends
include/ClasTool/ClasBanks/dicts/Linux64RHEL6/: TCCPBClassDict.cc  TCCPBClassDict.h  TDCPBClassDict.cc  TDCPBClassDict.h  TECPBClassDict.cc  TECPBClassDict.h  TEPICClassDict.cc  (+53 more)
include/ClasTool/Corrections/CVS/: Entries
include/ClasTool/DSTReader/: Makefile_depends
include/ClasTool/FillBank/: Makefile_depends
include/ClasTool/Filter/: Makefile_depends
include/ClasTool/Gsim/: Makefile_depends
include/ClasTool/NT10Reader/: Makefile  Makefile_depends
include/ClasTool/PartSieve/: Makefile_depends
include/ClasTool/TClasTool/: Makefile_depends
include/ClasTool/Utils/: Makefile_Scan_Epics  Makefile_WriteMiniDst  Makefile_WriteRootDst  Makefile_depends  Write_ROOT_Tree.cc
include/ClasTool/VirtualReader/: Makefile_depends
include/ClasTool/html/: CLASBANKS_Index.html  ClassHierarchy.html  DSTREADER_Index.html  FILTER_Index.html  LibraryDependencies.html  ListOfTypes.html  MAPUTILS_Index.html  PARTSIEVE_Index.html  TCCPBClass.html  TCLASTOOL_Index.html  TClasTool.html  TCounter.html  TCounterCol.html  TDBItem.html  TDCPBClass.html  TDSTReader.html  TECPBClass.html  TEPICClass.html  TEPICValue.html  TEVNTClass.html  TFilter.html  TGSIMClass.html  THEADClass.html  THEADERClass.html  THLSClass.html  TInterrupt.html  TLCPBClass.html  TMCHDClass.html  TMVRTClass.html  TMapUtils.html  TMiniDSTReader.html  TMiniDSTWriter.html  TPartSieve.html  TPartSieveHists.html  TQuery.html  TRunIndex.html  TS1STClass.html  TSCPBClass.html  TSTPBClass.html  TTAGRClass.html  (+10 more)
include/ClasTool/html/src/: TCCPBClass.cxx.html  TCCPBClass.h.html  TClasTool.cxx.html  TClasTool.h.html  TCounter.cxx.html  TCounter.h.html  TCounterCol.cxx.html  TCounterCol.h.html  TDBItem.cxx.html  TDBItem.h.html  TDCPBClass.cxx.html  TDCPBClass.h.html  TDSTReader.cxx.html  TDSTReader.h.html  TECPBClass.cxx.html  TECPBClass.h.html  TEPICClass.cxx.html  TEPICClass.h.html  TEPICValue.cxx.html  TEPICValue.h.html  TEVNTClass.cxx.html  TEVNTClass.h.html  TFilter.cxx.html  TFilter.h.html  TGSIMClass.cxx.html  TGSIMClass.h.html  THEADClass.cxx.html  THEADClass.h.html  THEADERClass.cxx.html  THEADERClass.h.html  THLSClass.cxx.html  THLSClass.h.html  TInterrupt.cxx.html  TInterrupt.h.html  TLCPBClass.cxx.html  TLCPBClass.h.html  TMCHDClass.cxx.html  TMCHDClass.h.html  TMVRTClass.cxx.html  TMVRTClass.h.html  (+36 more)
include/ClasTool/includes/CVS/: Repository
include/analysis_lib/: Makefile_top
include/analysis_lib/.dicts/: TIdentificatorDict.cxx  TIdentificatorDict.h
include/analysis_lib/include/: TIdentificator.h  TIdentificator.icc
include/analysis_lib/src/: Categorize.C  TIdentificator.cxx
jackson_analysis/: CMakeLists.txt  apply_SRC_Cut.cpp  get_mMiss_Hist.cpp
maps/: Acceptance.cpp  CMakeLists.txt  Maps_README.txt
maps/creation/: CMakeLists.txt  convert_uniform.cxx  ffread.3He  ffread.4He  ffread.C12  generator_eg2_electrons.cxx  generator_electrons.cxx  generator_non_electrons.cxx  mapmaker.cpp  mapmaker_eg2.cpp  mapmaker_eg2_fine_bin.cpp
maps/diagnostics/: CMakeLists.txt  basic_test.cpp  map_query.cpp  tof_test.cpp
write_tree/: CMakeLists.txt  write_tree_e2a.cxx
(+138 files in other folders)
